# LichessNerd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: compileOptions.cmake  submodules.cmake
include/chess/: chess.hxx
include/ui/: feedback.hxx  ui.hxx
include/ui/tui/: board.hxx
include/utils/: token.hxx
src/: LichessNerd.cxx
src/chess/: chess.cxx
src/ui/: feedback.cxx  ui.cxx
src/ui/tui/: board.cxx
src/utils/: token.cxx
